k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: products-api
  labels:
    name: products-api
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    name: development
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    environment: production
